# cubedart

./: LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/cubedart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: cubedart.podspec
lib/: cubedart.dart  cubedart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: cubedart.podspec
macos/Classes/: cubedart.cpp
src/: CMakeLists.txt  cubedart.cpp  cubedart.h
src/cubecpp/include/cubejs/: cube.hpp  obfuscate.hpp  solver.hpp
src/cubecpp/src/: cube.cpp  obfuscate.cpp  solver.cpp
test/: cubedart_test.dart
windows/: CMakeLists.txt
